--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
     <link rel="shortcut icon" type="image/png" href="./css/images/favicon.png">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+
     <div id="mode-wrapper">
         <button id="Easy" class="difficulty-btn">Easy</button><i class="fa fa-snowflake-o" aria-hidden="true"></i>
         <button id="Medium" class="difficulty-btn">Medium</button>
