--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
     <div class="" style="color: white">
         <h1 style="font-weight: 300; text-align: center; font-size: 5rem; margin-bottom: 0; margin-top: 20px;">
             Sorry!</h1>
-        <h2 style="margin-top: 10px; padding-top: 0; font-size: 1.5rem; text-align: center;">
+        <h2 style="margin-top: 10px; margin-right: 6em; margin-left: 6em; padding-top: 0; font-size: 1.5rem; text-align: center; font-weight: 300">
             EntwicklerHeld.de gerade nicht erreichbar :-( <br/> Updates zu aktuellen Wartungsarbeiten an der Plattform
-            findest du auf Twitter unter <a href="https://twitter.com/EntwicklerHeld"> @EntwicklerHeld</a></h2>
+            findest du auf <a style="color: white" href="https://twitter.com/EntwicklerHeld"> Twitter</a>, <a style="color: white" href="https://facebook.com/EntwicklerHeld"> Facebook</a> und <a style="color: white;" href="https://instagram.com/entwicklerHeld"> Instagram</a>.</h2>
     </div>
     <div style="width: 50%; margin: 1rem auto;" class="shadow">
         <div style="width:100%;height:0;padding-bottom:56%;position:relative;">
@@ -83,9 +83,10 @@
                     frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
         </div>
     </div>
-    <h2 style="margin-top: 20px; color: white; text-align: center;">Du brauchst trotzdem eine Herausforderung? Dann
+    <h2 style="margin-top: 20px; color: white; text-align: center; font-weight: 300">Du brauchst trotzdem eine Herausforderung? Dann
         miss dich hier! <br>
-        <button class="button-primary btn" id="play-button" onclick="startGame()">Los gehts!</button>
+        <button style="background-color: #ff6b81; color: white; transition: 0.5s; border: 2px solid transparent !important; text-transform: uppercase; letter-spacing: 2px; display: inline-block; margin-top: 3em; font-weight: normal; text-align: center; vertical-align: middle; touch-action: manipulation; cursor: pointer; background-image: none; border: 1px solid transparent; white-space: nowrap; padding: 10px 20px; font-size: 14px;
+    line-height: 1.42857; border-radius: 4px;" class="btn-primary btn" id="play-button" onclick="startGame()">Challenge accepted!</button>
     </h2>
 </div>
 <div style=" transition: filter 500ms linear;" class="filters" id="filters">
